# osrs-bot

./: .gitignore  .gitmodules  README.md  build-trigger.txt  build.gradle.kts  clean-build.ps1  error.txt  gradle-build-error.txt  report-bug.bat  run.bat  settings.gradle.kts  test.bat  test_osrswiki.py
.kiro/: scripts.json
.kiro/agents/: osrs-dev.json  osrs-dev.md  osrs-expert.json  osrs-expert.md  osrs-scripter.json  osrs-scripter.md  script-generator.json  script-generator.md
.kiro/knowledge/: extending-chromascape.md  project-conventions.md  script-generation-lessons-learned.md
.kiro/knowledge/chromascape-wiki/: Colour-picker.md  Discord-Notifier.md  Home.md  Intermediate-Scripting-From-Planning-to-Execution.md  Making-your-first-script.md  Pre‐requisite-installations.md  Requirements.md  ZoneManager-&-SubZoneMapper.md  _Sidebar.md  api-reference.md
.kiro/knowledge/demo-scripts/: DemoAgilityScript.java  DemoFishingScript.java  DemoMiningScript.java  DemoWineScript.java
.kiro/knowledge/osrs/: combat-guide.md  current-meta.md  equipment-items.md  hunters-spear.md  huntsmans-kit.md  locations.md  money-making.md  new-player-guide.md  npcs-monsters.md  quests.md  skills.md  training-methods.md
.kiro/settings/: lsp.json  mcp.json
.kiro/skills/chromascape/: SKILL.md
.kiro/skills/chromascape/references/: api-reference.md  code-review-checklist.md  extending-framework.md  lessons-learned.md  scripting-patterns.md
.kiro/skills/runelite/: SKILL.md
.kiro/skills/runelite/references/: built-in-plugins.md  configuration.md  plugin-development.md
.kiro/specs/: design.md  future-features.md  requirements.md  tasks.md
.kiro/specs/scripts/: BUG-TEMPLATE.md
.kiro/specs/scripts/barb-fish-cook/: SETUP.md  requirements.md
.kiro/specs/scripts/brutus-brawler/: SETUP.md  requirements.md
.kiro/specs/scripts/chicken-killer/: SETUP.md
.kiro/specs/scripts/complete/chicken-killer/: manifest.json
.kiro/specs/scripts/dev/: BUG-TEMPLATE.md  TEMPLATE.md
.kiro/specs/scripts/dev/chicken-killer/: requirements.md
.kiro/specs/scripts/dev/draynor-fish-cook/: SETUP.md  manifest.json
.kiro/specs/scripts/dev/restless-ghost/: bug-report.md  (+1 more)
.kiro/specs/scripts/draynor-fish-cook/: SETUP.md
.kiro/specs/scripts/draynor-fishing/: SETUP.md  requirements.md
.kiro/specs/scripts/f2p-melee-trainer/: progression.md  requirements.md
.kiro/specs/scripts/restless-ghost/: SETUP.md  requirements.md
.kiro/steering/: windows-testing.md
cli/: README.md  pyproject.toml
cli/src/osrs_bot/: __init__.py
docs/: user-guide.md
mcp-servers/osrswiki/: README.md  pyproject.toml
mcp-servers/osrswiki/osrswiki_mcp/: server.py
mcp-servers/wiseoldman/: README.md  pyproject.toml
mcp-servers/wiseoldman/wiseoldman_mcp/: server.py
scriptgen/: build.gradle.kts  settings.gradle.kts
scripts/: README.md  check-scriptgen.sh  complete-script.sh  deploy.sh  patch-logging.sh  sync-and-compile.ps1  sync-and-compile.sh  sync-wiki.sh
scripts/hooks/: post-merge  pre-commit
(+21 files in other folders)
