[project]
name = "osrswiki-mcp-server"
version = "2.0.0"
description = "MCP server for OSRS Wiki APIs (Bucket, MediaWiki, Prices)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osrswiki_mcp"]

[project.scripts]
osrswiki-mcp = "osrswiki_mcp.server:main"
