[project]
name = "wiseoldman-mcp-server"
version = "2.0.0"
description = "MCP server for Wise Old Man OSRS player tracker API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiseoldman_mcp"]

[project.scripts]
wiseoldman-mcp = "wiseoldman_mcp.server:main"
